# challenge

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  start-services.bat  stop-services.bat  음식만개등급화.csv
api/: serializers.py  urls.py  utils.py
api/challenges_backup_20250716_110021/: views.py
api/challenges_backup_20250716_110021/migrations/: 0006_alter_challenge_end_date_alter_challenge_start_date.py
api_integrated/: apps.py  models.py  urls.py  views.py
api_integrated/challenges/: serializers.py  urls.py  utils.py  views.py
api_integrated/challenges_backup_20250716_110021/: admin.py  models.py  serializers.py  urls.py  utils.py
api_integrated/challenges_backup_20250716_110021/migrations/: 0001_initial.py  0002_challenge_max_failures_and_more.py  0003_alter_badge_is_acquired_alter_challenge_is_active_and_more.py  0005_challenge_meal_count.py
api_integrated/migrations/: 0001_initial.py  0002_challenge_badge_challengeparticipant_and_more.py
challenges/: models.py  serializers.py
challenges/migrations/: 0004_alter_badge_is_acquired_alter_challenge_is_active_and_more.py
config/: asgi.py  celery.py  settings.py  urls.py
mlserver/: README.md  admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  tasks.py  urls.py  views.py
mlserver/migrations/: 0001_initial.py  0002_massestimationtask_error_message.py  0003_remove_massestimationtask_error_message.py
mlserver/templates/mlserver/: test_celery.html  test_task.html  test_upload.html  test_websocket.html
(+1 files in other folders)
