[project]
name = "challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "channels==3.0.5",
    "channels-redis>=4.2.1",
    "django>=5.2.4",
    "pandas>=2.3.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "websockets>=15.0.1",
]
